mise en page gallery

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,55 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
+app_layout:
+    path:     /
+    defaults: { _controller: "AppBundle:Default:layout" }
+    methods:  GET
+##############################################
+#                                            #
+#                   GALLERY                  #
+#                                            #
+##############################################
+
+app_gallery:
+    resource: "@AppBundle/Resources/config/routing/gallery.yml"
+    prefix:   /gallery
+
+##############################################
+#                                            #
+#                 SUB GALLERY                #
+#                                            #
+##############################################
+
+app_subgallery:
+      resource: "@AppBundle/Resources/config/routing/subgallery.yml"
+      prefix:   /subgallery
+
+##############################################
+#                                            #
+#                 COMPONENT                  #
+#                                            #
+##############################################
+
+app_component:
+    resource: "@AppBundle/Resources/config/routing/component.yml"
+    prefix:   /component
+
+##############################################
+#                                            #
+#                COLLECTION                  #
+#                                            #
+##############################################
+
+app_collection:
+    resource: "@AppBundle/Resources/config/routing/collection.yml"
+    prefix:   /collection
+
+
+
+############################################################################################################
+
+
 ##########################################
 ########   Routes Calendrier   ###########
 ##########################################
