--- a/src/AppBundle/Resources/config/routing/gallery.yml
+++ b/src/AppBundle/Resources/config/routing/gallery.yml
@@ -8,6 +8,11 @@ gallery_show:
     defaults: { _controller: "AppBundle:Gallery:show" }
     methods:  GET
 
+header_show_all:
+    path:     /show_all
+    defaults: { _controller: "AppBundle:Gallery:all" }
+    methods:  GET
+
 gallery_new:
     path:     /new
     defaults: { _controller: "AppBundle:Gallery:new" }
