--- a/src/AppBundle/Resources/config/doctrine/SubGallery.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/SubGallery.orm.yml
@@ -19,4 +19,15 @@ AppBundle\Entity\SubGallery:
           joinColumn:
             name: gallery_id
             referencedColumnName: id
+        gallery:
+          targetEntity: AppBundle\Entity\Component
+          joinColumn:
+            name: component_id
+            referencedColumnName: id
+        media:
+          targetEntity: Media
+          joinColumn:
+            name: media_id
+            referencedColumnName: id
+
     lifecycleCallbacks: {  }
