--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -82,3 +82,10 @@ fos_js_routing:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+##########################################
+##############   LIIP IMAGINE   ##########
+##########################################
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
+
