--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -19,22 +19,9 @@ app_subgallery:
       resource: "@AppBundle/Resources/config/routing/subgallery.yml"
       prefix:   /subgallery
 
-##############################################
-#                                            #
-#                 COMPONENT                  #
-#                                            #
-##############################################
+##########################################
+##############   LIIP IMAGINE   ##########
+##########################################
 
-app_component:
-    resource: "@AppBundle/Resources/config/routing/component.yml"
-    prefix:   /component
-
-##############################################
-#                                            #
-#                COLLECTION                  #
-#                                            #
-##############################################
-
-app_collection:
-    resource: "@AppBundle/Resources/config/routing/collection.yml"
-    prefix:   /collection
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
