maj entite subgallerie

--- a/src/AppBundle/Resources/config/doctrine/SubGallery.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/SubGallery.orm.yml
@@ -13,7 +13,8 @@ AppBundle\Entity\SubGallery:
             type: string
             length: 255
         prix:
-            type: integer
+            type: string
+            length: 255
             nullable: true
         description:
             type: text
