--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,11 +30,15 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                check_path: fos_user_security_check
                 default_target_path: /
-#
+                # [redirection après login]
+#                success_handler: redirect.after.login
+
             logout:
                 path: fos_user_security_logout
                 target: homepage
+                # [redirection apres logout]
 #                success_handler: redirect.after.logout
 
             anonymous:    true
@@ -43,10 +47,11 @@ security:
         - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/header/, role: ROLE_ADMIN }
-        - { path: ^/gallery/, role: ROLE_ADMIN }
-        - { path: ^/subgallery/, role: ROLE_ADMIN }
-        - { path: ^/calendar/, role: ROLE_ADMIN }
+        - { path: ^/header, role: ROLE_ADMIN }
+        - { path: ^/header/index.html, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/gallery, role: ROLE_ADMIN }
+        - { path: ^/subgallery, role: ROLE_ADMIN }
+        - { path: ^/calendar, role: ROLE_ADMIN }
 
             # activate different ways to authenticate
 
