--- a/src/AppBundle/Resources/config/doctrine/About.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/About.orm.yml
@@ -19,5 +19,6 @@ AppBundle\Entity\About:
           joinColumn:
             name: media_id
             referencedColumnName: id
+            cascade: ['all']
 
     lifecycleCallbacks: {  }
