--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -36,6 +36,17 @@ app_about:
         resource: "@AppBundle/Resources/config/routing/about.yml"
         prefix:   /about
 
+ ##############################################
+ #                                            #
+ #                  PARTNER                   #
+ #                                            #
+ ##############################################
+
+ app_partner:
+        resource: "@AppBundle/Resources/config/routing/partner.yml"
+        prefix:   /partner
+
+
 
 ############################################################################################################
 
