--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,12 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
+##############################################
+#                                            #
+#                  HEADER                    #
+#                                            #
+##############################################
+
 app_header:
     resource: "@AppBundle/Resources/config/routing/header.yml"
     prefix:   /header
@@ -33,8 +39,8 @@ app_subgallery:
 ##############################################
 
 app_about:
-        resource: "@AppBundle/Resources/config/routing/about.yml"
-        prefix:   /about
+      resource: "@AppBundle/Resources/config/routing/about.yml"
+      prefix:   /about
 
  ##############################################
  #                                            #
@@ -42,11 +48,9 @@ app_about:
  #                                            #
  ##############################################
 
- app_partner:
-        resource: "@AppBundle/Resources/config/routing/partner.yml"
-        prefix:   /partner
-
-
+app_partner:
+     resource: "@AppBundle/Resources/config/routing/partner.yml"
+     prefix:   /partner
 
 ############################################################################################################
 
@@ -81,11 +85,3 @@ fos_js_routing:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-
-##########################################
-##############   LIIP IMAGINE   ##########
-##########################################
-
-_liip_imagine:
-    resource: "@LiipImagineBundle/Resources/config/routing.xml"
-
