amelioration slider avec agenda

--- a/src/CalendarBundle/Resources/config/doctrine/Agenda.orm.yml
+++ b/src/CalendarBundle/Resources/config/doctrine/Agenda.orm.yml
@@ -26,6 +26,9 @@ CalendarBundle\Entity\Agenda:
             type: string
             length: 255
             nullable: true
+        slider:
+            type: boolean
+            nullable: true
 
     manyToOne:
         media:
