--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,52 +6,48 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_USER:        ROLE_USER
-        ROLE_ADMIN:       ROLE_ADMIN
+        ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+#        in_memory:
+#            memory: ~
         fos_userbundle:
             id: fos_user.user_provider.username
 
-
-
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
+         # disables authentication for assets and the profiler, adapt it according to your needs
+         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
+         main:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
-                check_path: fos_user_security_check
-                default_target_path: /
-                # [redirection après login]
+#                check_path: fos_user_security_check
+#                default_target_path: /
+#                 [redirection après login]
 #                success_handler: redirect.after.login
 
-            logout:
-                path: fos_user_security_logout
-                target: homepage
-                # [redirection apres logout]
+#            logout:
+#                path: fos_user_security_logout
+#                target: homepage
+#                 [redirection apres logout]
 #                success_handler: redirect.after.logout
 
+            logout: true
             anonymous:    ~
+            http_basic: ~
 
     access_control:
-        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/header, role: ROLE_ADMIN }
-        - { path: ^/header/index.html, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/gallery, role: ROLE_ADMIN }
-        - { path: ^/subgallery, role: ROLE_ADMIN }
-        - { path: ^/calendar/, role: ROLE_ADMIN }
+          - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/admin, role: ROLE_ADMIN }
 
             # activate different ways to authenticate
 
