--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,18 +27,13 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
-#                check_path: fos_user_security_check
-#                default_target_path: /
-#                 [redirection après login]
-#                success_handler: redirect.after.login
+                check_path: fos_user_security_check
+                default_target_path: /
 
-#            logout:
-#                path: fos_user_security_logout
-#                target: homepage
-#                 [redirection apres logout]
-#                success_handler: redirect.after.logout
+            logout:
+                path: fos_user_security_logout
+                target: homepage
 
-            logout: true
             anonymous:    ~
             http_basic: ~
 
@@ -47,7 +42,7 @@ security:
           - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-          - { path: ^/admin, role: ROLE_ADMIN }
+          - { path: ^/admin/, role: ROLE_ADMIN }
 
             # activate different ways to authenticate
 
