--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,11 +43,11 @@ security:
         - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_SUPER_ADMIN }
-        - { path: ^/header, role: ROLE_SUPER_ADMIN }
+        - { path: ^/header/, role: ROLE_SUPER_ADMIN }
         - { path: ^/header/index.html, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/gallery, role: ROLE_SUPER_ADMIN }
+        - { path: ^/gallery/, role: ROLE_SUPER_ADMIN }
         - { path: ^/subgallery, role: ROLE_SUPER_ADMIN }
-        - { path: ^/calendar, role: ROLE_SUPER_ADMIN }
+        - { path: ^/calendar/, role: ROLE_SUPER_ADMIN }
 
             # activate different ways to authenticate
 
